--- a/src/cases.pug
+++ b/src/cases.pug
@@ -5,5 +5,5 @@ block vars
 
 block content
   +header-hero('Our cases & clients')
-  +case-block
+  +case-block(data.allCases, 'full')
   +footer-block
