--- a/src/index.pug
+++ b/src/index.pug
@@ -3,6 +3,6 @@ extends _base.pug
 block content
   +header-hero
   if INCLUDE_CASES
-    +case-block
+    +case-block(data.frontCases, 'preview')
   +team-block
   +footer-block
