--- a/src/components/case-block/case-block.sass
+++ b/src/components/case-block/case-block.sass
@@ -3,50 +3,95 @@
     width: (100% / 2)
 
   @supports(display: grid)
-    &.-preview
-      > .grid
-        grid-template-columns: 10fr 7fr
-        grid-auto-rows: 1rem
-        grid-gap: 2rem
-
-        > .item
-          width: auto
-          grid-row: span 16
-
-        @media screen and (min-width: 1041px)
-          > .item
-            &:nth-child(1)
-              grid-row: 3 / span 16
-
-            &:nth-child(2)
-              grid-row: span 20
-
-            &:nth-child(3)
-              grid-row: span 13
-
-            &:nth-child(4)
-              grid-row: span 10
-
-        @media screen and (max-width: $medium-grid)
-          grid-template-columns: repeat(2, 1fr)
-
-          > .item
-            grid-row: span 14
-
-            &:nth-child(2)
-              grid-row: span 17
-
-            &:nth-child(4)
-              grid-row: span 10
-
-        @media screen and (max-width: $small-grid)
-          grid-auto-rows: 0.5rem
-          grid-gap: 1.5rem
-
-          > .item
-            height: auto
-
-    &.-full
-      grid-template-columns: repeat(3, 1fr)
+    &.-preview > .grid
+      grid-template-columns: 10fr 7fr
       grid-auto-rows: 1rem
       grid-gap: 2rem
+
+      > .item
+        width: auto
+        grid-row: span 16
+
+      @media screen and (min-width: 1041px)
+        > .item
+          &:nth-child(1)
+            grid-row: 3 / span 16
+
+          &:nth-child(2)
+            grid-row: span 20
+
+          &:nth-child(3)
+            grid-row: span 13
+
+          &:nth-child(4)
+            grid-row: span 10
+
+      @media screen and (max-width: $medium-grid)
+        grid-template-columns: repeat(2, 1fr)
+
+        > .item
+          grid-row: span 14
+
+          &:nth-child(2)
+            grid-row: span 17
+
+          &:nth-child(4)
+            grid-row: span 10
+
+      @media screen and (max-width: $small-grid)
+        grid-auto-rows: 0.5rem
+        grid-gap: 1.5rem
+
+        > .item
+          height: auto
+
+    &.-full > .grid
+      grid-template-columns: repeat(2, 1fr)
+      grid-auto-rows: 1rem
+      grid-gap: 2rem
+
+      > .item
+        width: auto
+        grid-row: span 17
+
+      @media screen and (max-width: $medium-grid)
+        > .item
+          grid-row: span 17
+
+          &:nth-child(2)
+            grid-column-start: 2
+            grid-row: 2 / span 17
+
+      @media screen and (max-width: $small-grid)
+        > .item
+          grid-row: span 9
+
+          &:nth-child(2)
+            grid-column-start: 2
+            grid-row: 2 / span 9
+
+      @media screen and (min-width: 1041px)
+        grid-template-columns: repeat(3, 1fr)
+
+        > .item
+          grid-row: span 17
+
+          &:nth-child(1)
+            grid-row: 2 / span 17
+
+          &:nth-child(3)
+            grid-column-start: 3
+            grid-row: 3 / span 23
+
+          &:nth-child(4)
+            grid-column-start: 1
+
+          &:nth-child(5)
+            grid-row: 18 / span 17
+
+          &:nth-child(4), &:nth-child(8)
+            grid-row: span 23
+
+          &.-promotion
+            grid-column-start: 3
+            grid-row: 26 / span 15
