--- a/src/components/grid-card/grid-card.sass
+++ b/src/components/grid-card/grid-card.sass
@@ -113,6 +113,14 @@
           display: inline-block
           height: 3.7rem
 
+        &.-block
+          width: 100%
+          border-left: 0
+          border-top: 1px solid rgba(white, 0.3)
+          margin-top: 2rem
+          padding-top: 2rem
+          padding-left: 0
+
     @media screen and (max-width: $medium-grid)
       > .meta
         > .action
