Toggle grid card on touch

--- a/src/components/case-card/case-card.pug
+++ b/src/components/case-card/case-card.pug
@@ -1,5 +1,5 @@
 mixin case-card(name, image, desc, client, type, actions, isPreview)
-  article.grid-card(tabindex='1')
+  article.grid-card
     .card
       .shine
 
