Add link action

--- a/src/components/case-card/case-card.pug
+++ b/src/components/case-card/case-card.pug
@@ -28,3 +28,5 @@ mixin case-card(name, image, desc, client, type, actions, isPreview)
                 a.link(href=action.url): img(src='./images/android.svg' width='37' height='37' alt='Download on Android' title='Download on Android')
               else if action.type === 'video'
                 a.link(href=action.url): img(src='./images/play.svg' width='37' height='37' alt='Play Video' title='Play Video')
+              else if action.type === 'link'
+                a.link(href=action.url): img(src='./images/link.svg' width='37' height='37' alt='Visit link' title='Visit link')
