Update case block grid

--- a/src/components/case-block/case-block.sass
+++ b/src/components/case-block/case-block.sass
@@ -85,12 +85,21 @@
 
           &:nth-child(4)
             grid-column-start: 1
+            grid-row: span 23
 
           &:nth-child(5)
             grid-row: 18 / span 17
 
-          &:nth-child(4), &:nth-child(8)
-            grid-row: span 23
+          &:nth-child(6)
+            grid-column-start: 1
+
+          &:nth-child(7)
+            grid-column-start: 2
+            grid-row: 35 / span 17
+
+          &:nth-child(8)
+            grid-column-start: 3
+            grid-row: 41 / span 23
 
           &.-promotion
             grid-column-start: 3
