--- a/src/components/case-block/case-block.pug
+++ b/src/components/case-block/case-block.pug
@@ -2,7 +2,7 @@ mixin case-block(items, type)
   section#cases.case-block.grid-block(class=`-${type}`)
     if type === 'preview'
       h2.heading Selected Projects
-      p.subheading We're only as good as our latest work
+      p.subheading What we have done so far
 
     .grid
       each item in items
