--- a/src/components/team-block/team-block.pug
+++ b/src/components/team-block/team-block.pug
@@ -14,5 +14,5 @@ mixin team-block
           )
 
       a(href=`mailto:${data.contactMail}`).item.-promotion
-        span.text Come and work with us!
+        span.text Come and join the crew!
         .right-arrow
