Add Anders and Erik

--- a/src/components/team-block/team-block.pug
+++ b/src/components/team-block/team-block.pug
@@ -10,7 +10,7 @@ mixin team-block
             astronaut.name,
             astronaut.image,
             astronaut.desc,
-            astronaut.phone
+            astronaut.email
           )
 
       a(href=`mailto:${data.contactMail}`).item.-promotion
