--- a/src/components/team-block/team-block.sass
+++ b/src/components/team-block/team-block.sass
@@ -38,6 +38,7 @@
         > .item
           grid-row: span 12
           width: auto
+          min-width: 0
 
           &:nth-child(2), &:nth-child(4), &:nth-child(5)
             grid-row: span 15
