--- a/src/components/astronaut-card/astronaut-card.pug
+++ b/src/components/astronaut-card/astronaut-card.pug
@@ -1,4 +1,4 @@
-mixin astronaut-card(name, image, desc, phone)
+mixin astronaut-card(name, image, desc, email)
   article.grid-card
     .card
       .shine
@@ -9,4 +9,4 @@ mixin astronaut-card(name, image, desc, phone)
 
       .info
         p= desc
-        p= phone
+        p.email= email
