--- a/src/components/grid-card/grid-card.sass
+++ b/src/components/grid-card/grid-card.sass
@@ -1,7 +1,3 @@
-@keyframes from-transform
-  from
-    transform: none
-
 .grid-card
   color: white
   position: relative
@@ -46,7 +42,7 @@
       object-fit: cover
       object-position: top
 
-      &[alt="Viktor Hesselbom"]
+      &[alt="Viktor Hesselbom"], &[alt="Anders Olausson"]
         object-position: center
 
       @supports(object-fit: cover)
@@ -78,6 +74,11 @@
       font-size: 1.6rem
       line-height: 1.5
       margin-bottom: 1em
+
+      &.email
+        width: 100%
+        overflow: hidden
+        text-overflow: ellipsis
 
       > a
         color: inherit
@@ -150,7 +151,6 @@
   .no-touchevents &:hover
     > .card
       z-index: 10
-      animation: from-transform .5s ease
       box-shadow: 0 0.5rem 10rem rgba(black, 0.2)
 
       > .name
@@ -158,11 +158,6 @@
 
       > .info, > .shine
         opacity: 1
-
-  .no-touchevents &:not(:hover)
-    > .card
-      transform: none !important
-      transition: transform .5s ease
 
   .no-touchevents &:not(:hover):not(.-open),
   .touchevents &:not(.-open)
