--- a/src/components/team-block/team-block.pug
+++ b/src/components/team-block/team-block.pug
@@ -10,7 +10,8 @@ mixin team-block
             astronaut.name,
             astronaut.image,
             astronaut.desc,
-            astronaut.email
+            astronaut.email,
+            astronaut.phone
           )
 
       a(href=`mailto:${data.contactMail}`).item.-promotion
