--- a/src/components/case-block/case-block.pug
+++ b/src/components/case-block/case-block.pug
@@ -19,7 +19,7 @@ mixin case-block(items, type)
 
       if type === 'preview'
         a(href=prod ? '/cases' : '/cases.html').item.-promotion
-          span.text See all cases & clients
+          span.text See more cases & clients
           .right-arrow
 
       if type === 'full'
