Fix link to 'cases.html

--- a/src/components/nav-menu/nav-menu.pug
+++ b/src/components/nav-menu/nav-menu.pug
@@ -3,6 +3,6 @@ mixin nav-menu
     button.toggler
 
     ul.menu
-      li: a(href='/cases') Our cases
+      li: a(href='/cases.html') Our cases
       li: a(href='/#team') The team
       li: a(href='/#contact') Contact
