--- a/src/components/team-block/team-block.pug
+++ b/src/components/team-block/team-block.pug
@@ -9,6 +9,7 @@ mixin team-block
           +astronaut-card(
             astronaut.name,
             astronaut.image,
+            astronaut.title,
             astronaut.desc,
             astronaut.email,
             astronaut.phone
