Start case page for Picular

--- a/src/base.sass
+++ b/src/base.sass
@@ -21,6 +21,9 @@ body
   &.-subpage
     background-image: url('./images/subhero@0,55x.jpg')
 
+  &.-case
+    background: white
+
   @media screen and (min-width: #{375px + 1px})
     background-image: url('./images/hills.jpg')
 
