--- a/src/index.sass
+++ b/src/index.sass
@@ -10,3 +10,4 @@
 @import './components/nav-menu/nav-menu.sass'
 @import './components/right-arrow/right-arrow.sass'
 @import './components/team-block/team-block.sass'
+@import './components/large-image/large-image.sass'
