--- a/src/cases.pug
+++ b/src/cases.pug
@@ -4,6 +4,6 @@ block vars
   - bodyClass = '-subpage'
 
 block content
-  +header-hero('Our cases & clients')
+  +header-hero('Our cases & clients', '-subpage')
   +case-block(data.allCases, 'full')
   +footer-block
