--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -6,3 +6,4 @@ include header-hero/header-hero.pug
 include nav-menu/nav-menu.pug
 include team-block/team-block.pug
 include error-block/error-block.pug
+include large-image/large-image.pug
