--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -7,3 +7,7 @@ include nav-menu/nav-menu.pug
 include team-block/team-block.pug
 include error-block/error-block.pug
 include large-image/large-image.pug
+include text-block/text-block.pug
+include projects-block/projects-block.pug
+include devices-block/devices-block.pug
+include bookmark-block/bookmark-block.pug
