--- a/src/index.sass
+++ b/src/index.sass
@@ -11,3 +11,7 @@
 @import './components/right-arrow/right-arrow.sass'
 @import './components/team-block/team-block.sass'
 @import './components/large-image/large-image.sass'
+@import './components/text-block/text-block.sass'
+@import './components/projects-block/projects-block.sass'
+@import './components/devices-block/devices-block.sass'
+@import './components/bookmark-block/bookmark-block.sass'
