--- a/src/components/footer-block/footer-block.sass
+++ b/src/components/footer-block/footer-block.sass
@@ -49,6 +49,15 @@
           font-size: 1.6rem
           transform: translateY(.2rem)
 
+  &.grey
+    background: #F0F0F0
+    color: red
+
+    > .inner > .social > .mail > a
+      color: #161D2B
+      text-decoration: none
+      display: inline-block
+
   @media screen and (max-width: 590px)
     > .inner
       > .logo
