--- a/src/components/bookmark-block/bookmark-block.pug
+++ b/src/components/bookmark-block/bookmark-block.pug
@@ -2,8 +2,7 @@ mixin bookmark-block()
   .bookmark-block
     .inner
 
-      div.iphone-x
-        img.phone-frame(src='./images/iphone-x-empty.png')
+      +parallax-device('iphoneX', './images/picular-screenshot-1.jpg')
         
       div.content
         h1.subheading One for the bookmarks.
