--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -11,3 +11,4 @@ include text-block/text-block.pug
 include projects-block/projects-block.pug
 include devices-block/devices-block.pug
 include bookmark-block/bookmark-block.pug
+include parallax-device/parallax-device.pug
