--- a/src/index.sass
+++ b/src/index.sass
@@ -15,3 +15,4 @@
 @import './components/projects-block/projects-block.sass'
 @import './components/devices-block/devices-block.sass'
 @import './components/bookmark-block/bookmark-block.sass'
+@import './components/parallax-device/parallax-device.sass'
