--- a/src/components/text-block/text-block.sass
+++ b/src/components/text-block/text-block.sass
@@ -35,7 +35,11 @@
         background: url('./images/arrow-red.svg') no-repeat 0 0/100%
         width: 7.7rem
         height: 2.3rem
+        transition: all 0.2s ease
 
+      &:hover::after
+        margin-left: 2.5rem
+        
     > img
       width: 100%
       height: auto
