--- a/src/components/case-block/case-block.sass
+++ b/src/components/case-block/case-block.sass
@@ -54,9 +54,6 @@
         width: auto
         grid-row: span 17
 
-    &.-linkto > .grid
-      grid-gap: 2rem
-
       @media screen and (max-width: $medium-grid)
         > .item
           grid-row: span 17
@@ -114,3 +111,21 @@
           *
             grid-row: 1 !important
             
+    &.-linkto > .grid
+      grid-template-columns: repeat(3, 1fr)
+      grid-auto-rows: 48rem
+      grid-gap: 2rem
+
+      @media screen and (max-width: $medium-grid)
+        grid-template-columns: repeat(2, 1fr)
+        grid-auto-rows: 32rem
+
+        > .item:nth-child(2)
+          grid-row: 1 / span 2
+
+      @media screen and (max-width: 600px)
+        grid-template-columns: repeat(1, 3fr)
+        grid-auto-rows: 20rem
+
+        > .item:nth-child(2)
+          grid-row: 1 / span 1
