--- a/src/components/case-card/case-card.pug
+++ b/src/components/case-card/case-card.pug
@@ -32,3 +32,6 @@ mixin case-card(name, image, desc, client, type, actions, isPreview)
                 a.link(href=action.url): img(src='./images/play.svg' width='37' height='37' alt='Play Video' title='Play Video')
               else if action.type === 'link'
                 a.link(href=action.url): img(src='./images/link.svg' width='37' height='37' alt='Visit link' title='Visit link')
+
+              if action.showcase
+                a.button(href=`/cases/${action.showcase}.html`) View Case
