--- a/src/components/grid-card/grid-card.sass
+++ b/src/components/grid-card/grid-card.sass
@@ -115,6 +115,18 @@
           display: inline-block
           height: 3.7rem
 
+        > .button
+          padding: 1rem 2rem 0.6rem
+          border: 2px solid $color-red
+          border-radius: 2.5rem
+          color: #fff
+          text-decoration: none
+          font-size: 1.6rem
+          text-transform: uppercase
+          font-weight: bold
+          position: absolute
+          right: 0
+
         &.-block
           width: 100%
           border-left: 0
