--- a/src/components/parallax-device/parallax-device.sass
+++ b/src/components/parallax-device/parallax-device.sass
@@ -1,6 +1,5 @@
-.parallax
+.parallax-device
   position: relative
-  margin-right: 2rem
 
   &.-iphoneX
     max-width: 41.6rem
@@ -8,16 +7,16 @@
     height: 100rem
     width: 41.6rem
     overflow: hidden
+    background: #fff
     @media screen and (max-width: 930px)
-      transform: scale(0.5)
-      margin: -15rem -8rem
-
-  > .parallax-device
+      height: 41.7rem
+      width: 20.8rem
+      
+  > .parallax-frame
     position: absolute
     width: 100%
     height: 100%
     max-height: 83.5rem
-    z-index: 1
     display: block
     position: absolute
     z-index: 10
@@ -27,8 +26,8 @@
     display: block
     max-width: inherit
     max-height: calc(100% - 1px)
-    overflow: hidden
     padding: 2.6rem 2.7rem
+    // overflow: hidden
 
     > .parallax-background
       width: 100%
