--- a/src/components/projects-block/projects-block.sass
+++ b/src/components/projects-block/projects-block.sass
@@ -12,6 +12,9 @@
     > .block
       display: inline-flex
       justify-content: space-between
+      @media screen and (max-width: 700px)
+        display: flex
+        flex-direction: column
 
       > .subheading
         font-size: 4rem
@@ -34,6 +37,10 @@
           background: url('./images/arrow-red.svg') no-repeat 0 0/100%
           width: 7.7rem
           height: 2.3rem
+          transition: all 0.2s ease
+
+        &:hover::after
+          margin-left: 2.5rem
 
       > .project
         flex-wrap: nowrap
