--- a/src/components/grid-card/grid-card.sass
+++ b/src/components/grid-card/grid-card.sass
@@ -120,6 +120,7 @@
           border: 2px solid $color-red
           border-radius: 2.5rem
           color: #fff
+          background: rgba(black, 0.3)
           text-decoration: none
           font-size: 1.6rem
           text-transform: uppercase
