--- a/src/components/text-block/text-block.sass
+++ b/src/components/text-block/text-block.sass
@@ -14,13 +14,14 @@
       font-weight: normal
 
     > .text
-      margin: 1.5rem 0
+      margin: 2rem 0
       font-size: 2rem
       max-width: 56rem
+      line-height: 2.8rem
       color: #737780
 
     > .link
-      margin-top: -0.5rem
+      margin-top: -0.7rem
       font-size: 1.8rem
       color: $color-red
       text-decoration: none
@@ -41,5 +42,7 @@
         margin-left: 2.5rem
         
     > img
+      margin-top: 7rem
       width: 100%
       height: auto
+      box-shadow: 0 0 30px 0 rgba(84,98,109,0.07)
