--- a/src/components/projects-block/projects-block.sass
+++ b/src/components/projects-block/projects-block.sass
@@ -32,15 +32,14 @@
           display: inline-block
           position: relative
           top: 0.6rem
-          margin-top: 2rem
-          margin-left: 2rem
+          margin: 2rem 0.5rem 0 2rem
           background: url('./images/arrow-red.svg') no-repeat 0 0/100%
           width: 7.7rem
           height: 2.3rem
           transition: all 0.2s ease
 
         &:hover::after
-          margin-left: 2.5rem
+          margin: 2rem 0 0 2.5rem
 
       > .project
         flex-wrap: nowrap
