--- a/src/components/case-card/case-card.pug
+++ b/src/components/case-card/case-card.pug
@@ -5,14 +5,16 @@ mixin case-card(name, image, desc, client, type, actions, isPreview)
 
       img(src=image alt=name)
 
-      h3.name(class=isPreview ? '-large' : '')= name
-        if actions && actions.length > 0
-          each action in actions
-            if action.showcase
-              div.right-arrow(class='mobile-case-link -block')
+      if actions && actions[0].showcase
+        h3.name(class=`-showcase${isPreview ? ' -large' : ''}`)= actions[0].showcase
+          a.right-arrow(class='mobile-case-link -block', href=`/cases/${actions[0].showcase}.html`)
+        .info
+          p.description(class='-mobile-desc')= desc
 
-      .info
-        p= desc
+      else
+        h3.name(class=isPreview ? '-large' : '')= name
+        .info
+          p.description= desc
 
       .meta
         if client
