--- a/src/components/grid-card/grid-card.sass
+++ b/src/components/grid-card/grid-card.sass
@@ -78,6 +78,9 @@
       line-height: 1.5
       margin-bottom: 1em
 
+      &.-mobile-desc
+        display: block
+
     .email, .phone
       color: #fff
       overflow: hidden
@@ -189,35 +192,25 @@
         > .mobile-case-link
           display: block
 
+          &:before
+            content: ''
+            display: block
+            position: absolute
+            background: none
+            width: 100%
+            height: 30rem
+            bottom: -1.5rem
+            left: -1.5rem
+            padding: 1.5rem
+        
       > .info > p
         font-size: 1.4rem
 
-      > .meta
-        display: block
-        position: absolute
-        margin: 0
-        padding: 0
-        top: -3rem
-        right: 0
-
-        > .data
+        &.-mobile-desc
           display: none
 
-        > .action 
-          
-          &.-block
-            border: none
-          
-          > .link
-            display: none
-
-          > .button 
-            width: 35rem
-            height: 40rem
-            border-radius: 0
-            border: none
-            color: rgba(white, 0)
-            background: none
+      > .meta
+        display: none
 
   .no-touchevents &:hover
     > .card
@@ -226,6 +219,9 @@
 
       > .name
         margin-bottom: 1.5rem
+        @media screen and (max-width: $small-grid)
+          &.-showcase
+            margin-bottom: 0rem
 
       > .info, > .shine
         opacity: 1
