--- a/src/components/nav-menu/nav-menu.sass
+++ b/src/components/nav-menu/nav-menu.sass
@@ -99,7 +99,7 @@
     > .toggler:after
       transform: translateY(-.1rem) rotate(-45deg)
 
-  body.-case &
+  body.-dark-toggler & 
     > .toggler
       color: $color-dark-blue
 
