--- a/src/index.sass
+++ b/src/index.sass
@@ -12,7 +12,10 @@
 @import './components/team-block/team-block.sass'
 @import './components/large-image/large-image.sass'
 @import './components/text-block/text-block.sass'
+@import './components/text-block-multiple/text-block-multiple.sass'
 @import './components/projects-block/projects-block.sass'
 @import './components/devices-block/devices-block.sass'
 @import './components/bookmark-block/bookmark-block.sass'
 @import './components/parallax-device/parallax-device.sass'
+@import './components/slide-in/slide-in.sass'
+@import './components/slide-in-block/slide-in-block.sass'
