--- a/src/components/header-hero/header-hero.sass
+++ b/src/components/header-hero/header-hero.sass
@@ -91,6 +91,9 @@
           padding-right: 0
 
   &.-case
+    margin-bottom: 0
+    padding-bottom: 5rem
+    
     > .inner
       > .content
         align-items: flex-start
