--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -8,7 +8,10 @@ include team-block/team-block.pug
 include error-block/error-block.pug
 include large-image/large-image.pug
 include text-block/text-block.pug
+include text-block-multiple/text-block-multiple.pug
 include projects-block/projects-block.pug
 include devices-block/devices-block.pug
 include bookmark-block/bookmark-block.pug
 include parallax-device/parallax-device.pug
+include slide-in/slide-in.pug
+include slide-in-block/slide-in-block.pug
