--- a/src/components/header-hero/header-hero.sass
+++ b/src/components/header-hero/header-hero.sass
@@ -75,6 +75,9 @@
           font-size: 3rem
           line-height: 4rem
 
+        > .subtitle
+          font-size: 3rem
+
       > .social
         display: none
 
