--- a/src/components/projects-block/projects-block.pug
+++ b/src/components/projects-block/projects-block.pug
@@ -6,6 +6,6 @@ mixin projects-block()
         h1.subheading See more projects
         a.link(href='/cases.html') Browse all projects
 
-      div.block
+      div.block(class='project')
 
         +case-block(data.browseCases, 'linkto')
