--- a/src/components/projects-block/projects-block.sass
+++ b/src/components/projects-block/projects-block.sass
@@ -41,13 +41,7 @@
         &:hover::after
           margin: 2rem 0 0 2.5rem
 
-      > .project
-        flex-wrap: nowrap
-        max-width: 36.7rem
-        width: 100%
-        color: red
-
-        > img
-          width: 100%
-          height: auto
+    > .project
+      margin-left: -2.8rem
+      margin-right: -2.8rem
           
