--- a/src/components/case-block/case-block.sass
+++ b/src/components/case-block/case-block.sass
@@ -118,14 +118,17 @@
 
       @media screen and (max-width: $medium-grid)
         grid-template-columns: repeat(2, 1fr)
-        grid-auto-rows: 32rem
+        grid-auto-rows: 41rem
 
         > .item:nth-child(2)
           grid-row: 1 / span 2
 
-      @media screen and (max-width: 600px)
-        grid-template-columns: repeat(1, 3fr)
+      @media screen and (max-width: 700px)
+        grid-template-columns: auto
         grid-auto-rows: 20rem
+        padding-left: 3rem
+        padding-right: 3rem
+
 
         > .item:nth-child(2)
           grid-row: 1 / span 1
