--- a/src/components/grid-card/grid-card.sass
+++ b/src/components/grid-card/grid-card.sass
@@ -65,6 +65,7 @@
       position: relative
       z-index: 3
       transition: transform .2s ease, margin .2s ease
+      text-shadow: 0 0.1rem 2rem rgba(black, 0.1)
 
     > .info
       height: 0
@@ -153,6 +154,10 @@
           padding-top: 2rem
           padding-left: 0
 
+      > .name
+        &.-large
+          font-size: 4rem
+
     @media screen and (min-width: $small-grid + 1px)
       .info-mobile
         display: none
@@ -190,6 +195,7 @@
           font-size: 2rem
 
         > .mobile-case-link
+          margin-top: 1.6rem
           display: block
 
           &:before
@@ -202,12 +208,15 @@
             bottom: -1.5rem
             left: -1.5rem
             padding: 1.5rem
-        
-      > .info > p
-        font-size: 1.4rem
 
-        &.-mobile-desc
-          display: none
+      > .info
+        max-width: 60rem
+        
+        > p
+          font-size: 1.4rem
+
+          &.-mobile-desc
+            display: none
 
       > .meta
         display: none
@@ -215,7 +224,7 @@
   .no-touchevents &:hover
     > .card
       z-index: 10
-      box-shadow: 0 0.5rem 10rem rgba(black, 0.2)
+      box-shadow: 0 0.5rem 3rem rgba(black, 0.3)
 
       > .name
         margin-bottom: 1.5rem
