--- a/src/components/parallax-device/parallax-device.sass
+++ b/src/components/parallax-device/parallax-device.sass
@@ -1,6 +1,28 @@
 .parallax-device
   position: relative
 
+  > .parallax-frame
+    position: absolute
+    width: 100%
+    height: calc(100% + 1px)
+    max-height: 83.5rem
+    display: block
+    position: absolute
+    z-index: 10
+    overflow: hidden
+    
+  > .parallax-content
+    position: absolute
+    display: block
+    max-width: inherit
+    max-height: calc(100% - 1px)
+    padding: 2.6rem 2.7rem
+
+    > .parallax-background
+      width: 100%
+      height: inherit
+      overflow: hidden
+
   &.-iphoneX
     max-width: 41.6rem
     max-height: 83.4rem
@@ -11,25 +33,6 @@
     @media screen and (max-width: 930px)
       height: 41.7rem
       width: 20.8rem
+      > .parallax-content
+        padding: 2.6rem 1.3rem
       
-  > .parallax-frame
-    position: absolute
-    width: 100%
-    height: 100%
-    max-height: 83.5rem
-    display: block
-    position: absolute
-    z-index: 10
-    
-  > .parallax-content
-    position: absolute
-    display: block
-    max-width: inherit
-    max-height: calc(100% - 1px)
-    padding: 2.6rem 2.7rem
-    // overflow: hidden
-
-    > .parallax-background
-      width: 100%
-      height: auto
-      overflow: hidden
