Update package.pkg + Various fixes

--- a/src/cases-retts-plus.pug
+++ b/src/cases-retts-plus.pug
@@ -20,4 +20,5 @@ block content
     'You U and I', 
     'Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, qui.', 
     '#161D2B', '#fff')
+  +projects-block('#1A2132', '#fff')
   +footer-block()
