--- a/src/cases-picular.pug
+++ b/src/cases-picular.pug
@@ -8,7 +8,7 @@ block content
   +large-image('./images/picular-1.jpg', 2880, 1276)
   +text-block('Search engine for colors', `Picular is a rocket fast primary color generator using Google's image search. If you ever needed the perfect yellow hex code from a banana, this is the tool for you.`, ['link', 'Visit the site', 'https://picular.co/'])
   +bookmark-block()
-  +text-block('Putting colors to words', `Picular helps designers to easily extract the most relevant colors for a specific context or domain. It helps to understand perception, psychology and aesthetics of a color or tone you’re interested in.`, ['image', 'Lemon baby', './images/picular-2.jpg'])
+  +text-block('Putting colors to words', `Picular helps designers to easily extract the most relevant colors for a specific context or domain. It helps to understand perception, psychology and aesthetics of a color or tone you’re interested in.`, ['image', 'Picular Screenshoot - sunflower', './images/picular-2.jpg'])
   +devices-block()
   +projects-block()
   +footer-block('grey')
