--- a/src/components/slide-in-block/slide-in-block.pug
+++ b/src/components/slide-in-block/slide-in-block.pug
@@ -1,5 +1,5 @@
-mixin slide-in-block(image, title, text, background = '#fff', color = '#000')
-  .slide-in-block(style={color: color, background: background})
+mixin slide-in-block(image, title, text, background, color)
+  .slide-in-block(style=`${background ? `background:${background};` : ''}${color ? `color:${color};` : ''}`)
     .inner
 
       .slider(style= `max-width: 700px`)
