--- a/src/components/text-block-multiple/text-block-multiple.pug
+++ b/src/components/text-block-multiple/text-block-multiple.pug
@@ -1,5 +1,5 @@
-mixin text-block-multiple(title, text, content = [], background = '#fff', color = '#000')
-  .text-block-multiple(style={color: color, background: background})
+mixin text-block-multiple(title, text, content = [], background, color)
+  .text-block-multiple(style=`${background ? `background:${background};` : ''}${color ? `color:${color};` : ''}`)
     .inner
 
       .box-left
